--- a/public/css/mapview.css
+++ b/public/css/mapview.css
@@ -17,7 +17,6 @@
     justify-content: space-around;
 }
 .mapview--event {
-
 }
 .mapview--party {
 
@@ -119,10 +118,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} 
 .mapview-action__btn {
     font-size: 10px;
     background: #B01756;
+    border: 1px solid #520C29;
 }
 .mapview-action__btn:hover {
     background: #E02471;
