--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -53,6 +53,7 @@
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/intro.css">
   <link rel="stylesheet" href="/css/mapview.css">
+  <link rel="stylesheet" href="/css/sideview.css">
   <link rel="stylesheet" href="/css/notifications.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
@@ -722,7 +723,7 @@
   <script src="js/src/tpl/lj-render-create.js"></script>
   <script src="js/src/tpl/lj-render-event.js"></script>
   <script src="js/src/tpl/lj-render-mapviews.js"></script>
-  <script src="js/src/tpl-lj-render-sideviews.js"></script>
+  <script src="js/src/tpl/lj-render-sideviews.js"></script>
   <script src="js/src/tpl/lj-render-typeahead.js"></script>
   <script src="js/src/lj-domEvents.js"></script>
   <script src="js/src/events/lj-events-chat.js"></script>
@@ -730,6 +731,7 @@
   <script src="js/src/events/lj-events-groups.js"></script>
   <script src="js/src/events/lj-events-filters.js"></script>
   <script src="js/src/events/lj-events-preview.js"></script>
+  <script src="js/src/events/lj-events-requests.js"></script>
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-mapview.js"></script>
   <script src="js/src/events/lj-events-sideview.js"></script>
