--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -52,6 +52,7 @@
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/intro.css">
   <link rel="stylesheet" href="/css/mapview.css">
+  <link rel="stylesheet" href="/css/sideview.css">
   <link rel="stylesheet" href="/css/notifications.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
@@ -714,6 +715,7 @@
   <script src="js/src/events/lj-events-groups.js"></script>
   <script src="js/src/events/lj-events-filters.js"></script>
   <script src="js/src/events/lj-events-preview.js"></script>
+  <script src="js/src/events/lj-events-requests.js"></script>
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
   <script src="js/src/events/lj-events-mapview.js"></script>
