--- a/public/keep/landing_home.css
+++ b/public/keep/landing_home.css
@@ -19,15 +19,6 @@
 }
 
 
-.etiquette {
-   background: rgba(255, 255, 255, 0.81);
-   border-bottom: 1px solid #E4E4E4;
-   box-shadow: 0 0 1px #e4e4e4;
-   padding: 15px;
-   border-radius: 2px 2px 0 0;
-    /* display: inline-block; */
-   ;
-}
 
 .fb-overlay {
    width: 100%;
@@ -175,7 +166,7 @@
 
 /*New Landing Rules */
 
-#landingWrap {
+.landing {
     position: relative;
 }
 .landing-hero {
