--- a/views/index-legacy.html
+++ b/views/index-legacy.html
@@ -772,6 +772,7 @@
   <script src="js/src/profile/profile_user.js"></script>
   <script src="js/src/search/search.js"></script>
   <script src="js/src/search/search_filters.js"></script>
+  <script src="js/src/seek/seek.js"></script>
   <script src="js/src/settings/settings.js"></script>
   <script src="js/src/spotted/spotted.js"></script>
   <script src="js/src/static/static.js"></script>
