--- a/public/css/src/app/app_header.css
+++ b/public/css/src/app/app_header.css
@@ -1,39 +1,32 @@
 
 
 .app-header {
+	display: flex;
 	width: 100%;
-	height: 100px;
-	position: absolute;
+	height: 54px;
+	position: fixed;
 	top: 0;
 	left: 0;
 	background: #191919;
-	display: none;
+	z-index: 100;
 }
 
-.app-header__logo {
+.app-header__splitter {position: absolute;width: 100%;top: 54px;background: #33AFFF;height: 6px;display: none;}
+.app-header__logo {margin-left: 100px;width: 40px;text-align: center;}
 
+.app-header__logo img {margin-top: 10px;}
+
+.app-nav {width: 350px;display: flex;justify-content: center;flex-direction: row;color: #454545;background: #191919;position: relative;}
+
+.app-nav ul {display: inline-block;position: relative;height: 100%;}
+
+.app__menu-item {display: inline-block;font-size: 20px;width: 60px;height: 54px;text-align: center;}
+.app__menu-item.active {
+	background: black;
+	color: white;
 }
-
-.app-header__logo img {
-
-}
-
-.app-nav {
-
-}
-
-.app-nav ul {
-
-}
-
-.app__menu-item {
-
-}
-
-.app_menu-item a {
+.app__menu-item a {
 
 }
 
-.app_menu-icon {
-
-}
+.app__menu-icon {margin-top: 19px;display: inline-block;}
