--- a/public/css/src/app/app_layout.css
+++ b/public/css/src/app/app_layout.css
@@ -1,8 +1,11 @@
 
-.app {
-
-}
+.app {display: flex;align-items: center;flex-direction: column;height: 100%;width: 100%;background: white;z-index: 0;position: absolute;padding-top: 60px;}
 
 .app-section {
-
+ width: 100%;
+ background: white;
+ z-index: 10;
+}
+.app-section.active {
+    display: flex;
 }
