--- a/public/css/src/app/app_popup.css
+++ b/public/css/src/app/app_popup.css
@@ -4,7 +4,7 @@
    min-width: 400px;
    position: fixed;
    z-index: 10000;
-   padding: 12px;
+   padding: 12px; 
    box-shadow: 0 0 5px #D2D2D2;
 }
 
@@ -17,4 +17,38 @@
    padding: 25px;
    text-align: center;
    /* overflow: auto; */
+}
+
+.toast {
+   position: fixed;
+   left: 50%;
+   transform: translateX(-50%)!important;
+   top: 6px;
+   min-width: 400px;
+   height: 42px;
+   z-index:10000;
+   color: white;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   font-size: 16px;
+   border-radius: 4px;
+}
+
+.toast--info {background: #33AFFF;}
+
+.toast--error {background: #de3653;}
+
+.toast--success {background: black;}
+
+.toast__msg {
+
+}
+
+.app__loader {
+   position: fixed;
+   left: 50%;
+   transform: translateX(-50%);
+   top: 22px;
 }
