--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -1,4 +1,144 @@
-/* Générales */
+
+
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+ 
+.profile-section {/* display: flex; */margin: 30px 0;}
+
+.profile-me {flex-direction: column;width: 60%;}
+
+.profile-me__title {
+
+}
+
+.profile-me__title h1 { 
+
+}
+
+.profile-me__subtitle {
+
+}
+
+.profile-me__subtitle h3 {color: #454545;font-weight: 200;}
+
+.profile-me__splitter {width: 100px;height: 6px;background: #33AFFF;margin: 14px auto 30px;border-radius: 20px;}
+
+.profile-input {
+    /* display: flex; */
+    /* flex-direction: column; */
+}
+.profile__input {display: flex;position: relative;flex-direction: column;align-items: flex-start;margin: 0 0 30px 0;}
+
+.profile__input label {font-size: 14px;font-weight: 700;text-transform: uppercase;}
+
+.profile__input .profile__input-field {
+    padding: 8px 10px 10px 0;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #eee;
+    width: 100%;
+    font-size: 24px;
+    font-weight: 200;
+    cursor: pointer;
+    transition: all linear .15s;
+}
+
+.profile__input:not(.profile__input--no-edit) .profile__input-field:hover {
+    border-color: #53C26D;
+}
+.profile__input input[type="text"]{}
+
+.profile__input input[type="number"]{
+
+}
+
+.profile__input textarea {
+  resize: none;
+}
+.profile__input i {
+  position: absolute;
+  left: -70px;
+  font-size: 20px;
+  top: 6px;
+  padding-top: 13px;
+  color: #191919;
+  background: #eee;
+  box-sizing: border-box;
+  border-radius: 100px;
+  height: 50px;
+  width: 50px;
+}
+
+
+.profile__input-explanation {
+  color: #919191;
+  font-weight: 200;
+  margin-top: 6px;
+}
+
+
+.profile__input.active .profile__input-field {
+    /* font-weight: 400; */
+    color: #53c26d;
+    border-color: #53C26D;
+}
+
+.profile__input--no-edit .profile__input-field {
+  cursor: default;
+  color: #ccc;
+}
+
+.profile__input .profile__input-action {
+  top: 14px;
+  right: -80px;
+  left: auto;
+  display: none;
+  cursor: pointer;
+  font-size: 14px;
+  height: 40px;
+  width: 40px;
+  padding-top: 12px;
+}
+
+
+.profile__input .profile__action-validate {
+  background: #53c26d;
+  /* border: 1px solid #33AFFF; */
+  color: white;
+  right: -34px;
+}
+.profile__input .profile__action-cancel {
+  background: white;
+  border: 1px solid;
+}
+
+.profile__input .profile__action-cancel:hover {
+  background: #f9f9f9;
+}
+.profile__input .profile__action-validate:hover {
+  opacity: 0.75!important;
+}
+
+.profile__input.--validating .profile__input-action{
+  opacity: .5!important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 #profileWrap {margin-top: 20px;}
 
