--- a/public/css/src/app/app_layout.css
+++ b/public/css/src/app/app_layout.css
@@ -9,3 +9,10 @@
 .app-section.active {
     display: flex;
 }
+
+.super-centered {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%)
+}
